add demo3 & ipynb

--- a/demo2/demo2.ipynb
+++ b/demo2/demo2.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "## 1.背景介绍\n",
     "\n",
-    "本实验主要研究 PyTorch 分布式训练框架下的单机多卡（Single Machine Multi-GPU）并行训练方法，重点探索 torch.distributed 和 torch.nn.parallel.DistributedDataParallel (DDP) 的使用。\n",
-    "\n",
-    "随着深度学习模型规模的不断增长，单张 GPU 的计算能力往往难以满足高效训练的需求，因此，利用多张 GPU 进行数据并行加速训练成为一种常见的优化方案。\n",
-    "\n",
-    "本实验采用 PyTorch 框架，实现一个基于 Transformer 结构的 NLP 模型，并使用 DDP 进行多 GPU 训练，以验证其性能和正确性。"
+    "本实验主要研究 PyTorch 分布式训练框架下的单机多卡（Single Machine Multi-GPU）流水线并行训练方法，重点探索 torch.distributed.pipelining 的使用。"
    ]
   },
   {
@@ -18,11 +14,7 @@
    "metadata": {},
    "source": [
     "## 2.实验目的\n",
-    "掌握 PyTorch 分布式训练框架的基本概念，包括 torch.distributed、DistributedDataParallel 等核心 API。\n",
-    "\n",
-    "实现基于 DDP 的数据并行训练，在单机多 GPU 设备上进行深度学习模型训练，并理解其工作原理。\n",
-    "\n",
-    "理解 DistributedSampler 在多 GPU 训练中的作用，确保数据在多个进程间均匀分配。\n"
+    "实现基于 torch.distributed.pipelining 的流水线并行训练，并理解其工作原理。\n"
    ]
   },
   {
@@ -31,7 +23,7 @@
    "source": [
     "## 3.硬件要求\n",
     "\n",
-    "2张 GPU（4090、V100、A100等）或 CPU 。\n"
+    "2张 GPU（4090、V100、A100等）。\n"
    ]
   },
   {
@@ -40,21 +32,21 @@
    "source": [
     "## 4.技术原理\n",
     "\n",
-    "本实验的核心是 PyTorch 的 DistributedDataParallel (DDP)，它用于在多个 GPU  设备之间高效地并行化训练过程。其基本原理如下：\n",
+    "### 流水线并行（Pipeline Parallelism）\n",
     "\n",
-    "### 数据并行（Data Parallelism）\n",
+    "流水线并行指将模型的不同部分放在不同的GPU上，从而降低单个GPU显存使用量。\n",
     "\n",
-    "- 采用 单机多 GPU 数据并行策略，每张 GPU 运行一个独立的训练进程（采用 torch.multiprocessing 进行进程管理）。\n",
+    "例如，如果有模型为以下结构: [embedding -> pos_encoding -> layer.0 -> layer.1 -> layer.2 -> layer.3 -> out_linear]\n",
     "\n",
-    "- 训练数据集在多个 GPU 之间划分，每张 GPU 仅处理部分数据，并行计算梯度。\n",
+    "我们可以将 [embedding -> pos_encoding -> layer.0 -> layer.1] 这部分模型放到 GPU 0 上，将其余部分 ( [layer.2 -> layer.3 -> out_linear] ) 放到 GPU 1 上。\n",
     "\n",
-    "- DistributedSampler 确保每张 GPU 处理的数据不会重复，从而保证训练效率和正确性。\n",
+    "在前向传播的时候，输入数据经过 GPU 0，计算得到 layer.1 的输出，然后此时 GPU 0 与 GPU 1 之间进行一次张量通信，将 layer.1 的输出发送给 GPU 1。 随后 GPU 1 完成其余部分模型的计算\n",
     "\n",
-    "### DDP 训练流程\n",
+    "同理，在反向传播的时候，不同 GPU 之间 也会进行梯度的通信。\n",
     "\n",
-    "每个 GPU 进程独立计算梯度。\n",
+    "### micro-batch 优化\n",
     "\n",
-    "PyTorch DDP 通过 梯度同步（All-Reduce） 机制，在后向传播时将所有 GPU 的梯度聚合并同步，以确保模型参数在所有 GPU 上保持一致。"
+    "朴素的流水线并行效率不高，是因为同一时间只有一张 GPU 在进行计算。为了提高 GPU 的利用效率，micro-batch 优化技术将一个 input batch 分割成多个 micro-batch， 从而提高数据在多块 GPU 上的流转效率。"
    ]
   },
   {
@@ -150,19 +142,27 @@
     "from torch.utils.data import DistributedSampler\n",
     "import math\n",
     "\n",
+    "\n",
+    "from torch.distributed.pipelining import pipeline, SplitPoint\n",
+    "from torch.distributed.pipelining import ScheduleGPipe\n",
+    "\n",
+    "\n",
     "class PositionalEncoding(nn.Module):\n",
     "    def __init__(self, d_model, max_len=5000):\n",
     "        super(PositionalEncoding, self).__init__()\n",
     "        pe = torch.zeros(max_len, d_model)\n",
     "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
+    "        div_term = torch.exp(\n",
+    "            torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model)\n",
+    "        )\n",
     "        pe[:, 0::2] = torch.sin(position * div_term)\n",
     "        pe[:, 1::2] = torch.cos(position * div_term)\n",
     "        pe = pe.unsqueeze(0)\n",
-    "        self.register_buffer('pe', pe)\n",
+    "        self.register_buffer(\"pe\", pe)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return x + self.pe[:, :x.size(1)]\n",
+    "        return x + self.pe[:, : x.size(1)]\n",
+    "\n",
     "\n",
     "class MultiHeadSelfAttention(nn.Module):\n",
     "    def __init__(self, d_model, num_heads):\n",
@@ -170,37 +170,55 @@
     "        assert d_model % num_heads == 0\n",
     "        self.d_k = d_model // num_heads\n",
     "        self.num_heads = num_heads\n",
-    "        \n",
+    "\n",
     "        self.q_linear = nn.Linear(d_model, d_model)\n",
     "        self.k_linear = nn.Linear(d_model, d_model)\n",
     "        self.v_linear = nn.Linear(d_model, d_model)\n",
     "        self.out_linear = nn.Linear(d_model, d_model)\n",
-    "        \n",
+    "\n",
     "    def forward(self, x, mask=None):\n",
     "        batch_size = x.shape[0]\n",
-    "        \n",
-    "        q = self.q_linear(x).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)\n",
-    "        k = self.k_linear(x).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)\n",
-    "        v = self.v_linear(x).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)\n",
-    "        \n",
+    "\n",
+    "        q = (\n",
+    "            self.q_linear(x)\n",
+    "            .view(batch_size, -1, self.num_heads, self.d_k)\n",
+    "            .transpose(1, 2)\n",
+    "        )\n",
+    "        k = (\n",
+    "            self.k_linear(x)\n",
+    "            .view(batch_size, -1, self.num_heads, self.d_k)\n",
+    "            .transpose(1, 2)\n",
+    "        )\n",
+    "        v = (\n",
+    "            self.v_linear(x)\n",
+    "            .view(batch_size, -1, self.num_heads, self.d_k)\n",
+    "            .transpose(1, 2)\n",
+    "        )\n",
+    "\n",
     "        scores = torch.matmul(q, k.transpose(-2, -1)) / math.sqrt(self.d_k)\n",
     "        if mask is not None:\n",
-    "            scores = scores.masked_fill(mask == 0, float('-1e9'))\n",
-    "        \n",
+    "            scores = scores.masked_fill(mask == 0, float(\"-1e9\"))\n",
+    "\n",
     "        attn_weights = F.softmax(scores, dim=-1)\n",
     "        output = torch.matmul(attn_weights, v)\n",
-    "        \n",
-    "        output = output.transpose(1, 2).contiguous().view(batch_size, -1, self.num_heads * self.d_k)\n",
+    "\n",
+    "        output = (\n",
+    "            output.transpose(1, 2)\n",
+    "            .contiguous()\n",
+    "            .view(batch_size, -1, self.num_heads * self.d_k)\n",
+    "        )\n",
     "        return self.out_linear(output)\n",
+    "\n",
     "\n",
     "class FeedForward(nn.Module):\n",
     "    def __init__(self, d_model, d_ff):\n",
     "        super(FeedForward, self).__init__()\n",
     "        self.fc1 = nn.Linear(d_model, d_ff)\n",
     "        self.fc2 = nn.Linear(d_ff, d_model)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        return self.fc2(F.relu(self.fc1(x)))\n",
+    "\n",
     "\n",
     "class TransformerBlock(nn.Module):\n",
     "    def __init__(self, d_model, num_heads, d_ff, dropout=0.1):\n",
@@ -210,7 +228,7 @@
     "        self.ffn = FeedForward(d_model, d_ff)\n",
     "        self.norm2 = nn.LayerNorm(d_model)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x, mask=None):\n",
     "        attn_out = self.attention(x, mask)\n",
     "        x = self.norm1(x + self.dropout(attn_out))\n",
@@ -218,25 +236,31 @@
     "        x = self.norm2(x + self.dropout(ffn_out))\n",
     "        return x\n",
     "\n",
+    "\n",
     "class Transformer(nn.Module):\n",
-    "    def __init__(self, vocab_size, d_model=512, num_heads=8, d_ff=2048, num_layers=6, max_len=5000):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        vocab_size,\n",
+    "        d_model=512,\n",
+    "        num_heads=8,\n",
+    "        d_ff=2048,\n",
+    "        num_layers=6,\n",
+    "        max_len=5000,\n",
+    "    ):\n",
     "        super(Transformer, self).__init__()\n",
     "        self.embedding = nn.Embedding(vocab_size, d_model)\n",
     "        self.pos_encoding = PositionalEncoding(d_model, max_len)\n",
-    "        self.layers = nn.ModuleList([TransformerBlock(d_model, num_heads, d_ff) for _ in range(num_layers)])\n",
+    "        self.layers = nn.ModuleList(\n",
+    "            [TransformerBlock(d_model, num_heads, d_ff) for _ in range(num_layers)]\n",
+    "        )\n",
     "        self.out_linear = nn.Linear(d_model, vocab_size)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x, mask=None):\n",
     "        x = self.embedding(x)\n",
     "        x = self.pos_encoding(x)\n",
-    "        mask = torch.triu(torch.ones(x.shape[1], x.shape[1]), diagonal=1)\n",
     "        for layer in self.layers:\n",
-    "            x = layer(x, mask)\n",
-    "        return self.out_linear(x)\n",
-    "\n",
-    "model = Transformer(1000, 32, 8, 64, 2, 5000)\n",
-    "\n",
-    "print(model)"
+    "            x = layer(x)\n",
+    "        return self.out_linear(x)\n"
    ]
   },
   {
@@ -300,16 +324,6 @@
    "outputs": [],
    "source": [
     "def train(rank, world_size):\n",
-    "\n",
-    "    backend = \"nccl\" if torch.cuda.is_available() else \"gloo\"\n",
-    "    device = torch.device(f\"cuda:{rank}\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "    dist.init_process_group(backend=backend, rank=rank, world_size=world_size)\n",
-    "\n",
-    "    dataset = NLPDataset(size=12, length=10)\n",
-    "    sampler = DistributedSampler(dataset, num_replicas=world_size, rank=rank)\n",
-    "    dataloader = DataLoader(dataset, batch_size=2, sampler=sampler)\n",
-    "\n",
     "    VOCAB_SIZE = 100\n",
     "    D_MODEL = 12\n",
     "    NUM_HEADS = 4\n",
@@ -317,23 +331,62 @@
     "    NUM_LAYERS = 2\n",
     "    MAX_LEN = 100\n",
     "\n",
-    "    model = Transformer(vocab_size=VOCAB_SIZE, d_model=D_MODEL, num_heads=NUM_HEADS, d_ff=D_FF, num_layers=NUM_LAYERS, max_len=MAX_LEN).to(device)\n",
-    "    model = DDP(model, device_ids=[rank] if torch.cuda.is_available() else None)\n",
+    "    DATASET_SIZE = 12\n",
+    "    DATASET_LENGTH = 10\n",
+    "    BATCH_SIZE = 4\n",
     "\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
+    "    NUM_MICROBATCHES = 2\n",
     "\n",
-    "    for epoch in range(500):\n",
+    "    def compute_loss(output, target):\n",
+    "        criterion = nn.CrossEntropyLoss()\n",
+    "        loss = criterion(output.view(-1, VOCAB_SIZE), target.view(-1))\n",
+    "        return loss\n",
+    "\n",
+    "    dataset = NLPDataset(size=DATASET_SIZE, length=DATASET_LENGTH)\n",
+    "    dataloader = DataLoader(dataset, batch_size=BATCH_SIZE)\n",
+    "\n",
+    "    x = torch.zeros((BATCH_SIZE // NUM_MICROBATCHES, DATASET_LENGTH), dtype=torch.long)\n",
+    "\n",
+    "    pipe = pipeline(\n",
+    "        module=Transformer(\n",
+    "            vocab_size=VOCAB_SIZE,\n",
+    "            d_model=D_MODEL,\n",
+    "            num_heads=NUM_HEADS,\n",
+    "            d_ff=D_FF,\n",
+    "            num_layers=NUM_LAYERS,\n",
+    "            max_len=MAX_LEN,\n",
+    "        ),\n",
+    "        mb_args=(x,),\n",
+    "        split_spec={\n",
+    "            \"layers.1\": SplitPoint.BEGINNING,\n",
+    "        },\n",
+    "    )\n",
+    "\n",
+    "    rank = int(os.environ[\"RANK\"])\n",
+    "    world_size = int(os.environ[\"WORLD_SIZE\"])\n",
+    "\n",
+    "    dist.init_process_group(backend=\"nccl\", rank=rank, world_size=world_size)\n",
+    "\n",
+    "    device = f\"cuda:{rank}\"\n",
+    "\n",
+    "    stage_mod = pipe.get_stage_module(rank)\n",
+    "    optimizer = optim.SGD(stage_mod.parameters(), lr=0.01)\n",
+    "    stage = pipe.build_stage(rank, device, None)\n",
+    "\n",
+    "    schedule = ScheduleGPipe(stage, NUM_MICROBATCHES, compute_loss)\n",
+    "    for epoch in range(200):\n",
     "        for batch, data in enumerate(dataloader):\n",
-    "            data = data.to(device)\n",
+    "            x = data.to(device)\n",
     "            optimizer.zero_grad()\n",
-    "            outputs = model(data)\n",
-    "            loss = criterion(outputs.view(-1, VOCAB_SIZE), data.view(-1))\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "\n",
     "            if rank == 0:\n",
-    "                print(f\"Epoch {epoch}, Batch {batch}, Loss: {loss.item()}\")\n",
+    "                schedule.step(x)\n",
+    "            else:\n",
+    "                losses = []\n",
+    "                output = schedule.step(target=x, losses=losses)\n",
+    "                print(\n",
+    "                    f\"Epoch {epoch}, Batch {batch}, Loss: {torch.stack(losses).mean()}\"\n",
+    "                )\n",
+    "            optimizer.step()\n",
     "\n",
     "    dist.destroy_process_group()"
    ]
