--- a/demo3/demo3.ipynb
+++ b/demo3/demo3.ipynb
@@ -6,11 +6,7 @@
    "source": [
     "## 1.背景介绍\n",
     "\n",
-    "本实验主要研究 PyTorch 分布式训练框架下的单机多卡（Single Machine Multi-GPU）并行训练方法，重点探索 torch.distributed 和 torch.nn.parallel.DistributedDataParallel (DDP) 的使用。\n",
-    "\n",
-    "随着深度学习模型规模的不断增长，单张 GPU 的计算能力往往难以满足高效训练的需求，因此，利用多张 GPU 进行数据并行加速训练成为一种常见的优化方案。\n",
-    "\n",
-    "本实验采用 PyTorch 框架，实现一个基于 Transformer 结构的 NLP 模型，并使用 DDP 进行多 GPU 训练，以验证其性能和正确性。"
+    "本实验主要研究 PyTorch 分布式训练框架下的多机多卡数据/流水线混合并行训练方法。"
    ]
   },
   {
@@ -18,11 +14,7 @@
    "metadata": {},
    "source": [
     "## 2.实验目的\n",
-    "掌握 PyTorch 分布式训练框架的基本概念，包括 torch.distributed、DistributedDataParallel 等核心 API。\n",
-    "\n",
-    "实现基于 DDP 的数据并行训练，在单机多 GPU 设备上进行深度学习模型训练，并理解其工作原理。\n",
-    "\n",
-    "理解 DistributedSampler 在多 GPU 训练中的作用，确保数据在多个进程间均匀分配。\n"
+    "实现基于 torch.distributed.pipelining 和 torch.nn.parallel.DistributedDataParallel 的并行训练，并理解其工作原理。\n"
    ]
   },
   {
@@ -31,7 +23,7 @@
    "source": [
     "## 3.硬件要求\n",
     "\n",
-    "2张 GPU（4090、V100、A100等）或 CPU 。\n"
+    "两台服务器，各两张 GPU（4090、V100、A100等）。\n"
    ]
   },
   {
@@ -40,21 +32,9 @@
    "source": [
     "## 4.技术原理\n",
     "\n",
-    "本实验的核心是 PyTorch 的 DistributedDataParallel (DDP)，它用于在多个 GPU  设备之间高效地并行化训练过程。其基本原理如下：\n",
+    "### 混合并行\n",
     "\n",
-    "### 数据并行（Data Parallelism）\n",
-    "\n",
-    "- 采用 单机多 GPU 数据并行策略，每张 GPU 运行一个独立的训练进程（采用 torch.multiprocessing 进行进程管理）。\n",
-    "\n",
-    "- 训练数据集在多个 GPU 之间划分，每张 GPU 仅处理部分数据，并行计算梯度。\n",
-    "\n",
-    "- DistributedSampler 确保每张 GPU 处理的数据不会重复，从而保证训练效率和正确性。\n",
-    "\n",
-    "### DDP 训练流程\n",
-    "\n",
-    "每个 GPU 进程独立计算梯度。\n",
-    "\n",
-    "PyTorch DDP 通过 梯度同步（All-Reduce） 机制，在后向传播时将所有 GPU 的梯度聚合并同步，以确保模型参数在所有 GPU 上保持一致。"
+    "在朴素的数据并行中，每个 GPU 都要保存一份完整的模型权重。若单张显卡显存不足，便可在数据并行组内，开启流水线并行，从而降低单张显卡的显存需求。"
    ]
   },
   {
@@ -146,23 +126,34 @@
     "import torch.distributed as dist\n",
     "import torch.nn.functional as F\n",
     "from torch.nn.parallel import DistributedDataParallel as DDP\n",
+    "from torch.distributed.device_mesh import init_device_mesh\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.utils.data import DistributedSampler\n",
+    "from torch.distributed import ReduceOp\n",
     "import math\n",
+    "import yaml\n",
+    "import argparse\n",
+    "\n",
+    "from torch.distributed.pipelining import pipeline, SplitPoint, build_stage\n",
+    "from torch.distributed.pipelining import ScheduleGPipe\n",
+    "\n",
     "\n",
     "class PositionalEncoding(nn.Module):\n",
     "    def __init__(self, d_model, max_len=5000):\n",
     "        super(PositionalEncoding, self).__init__()\n",
     "        pe = torch.zeros(max_len, d_model)\n",
     "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
+    "        div_term = torch.exp(\n",
+    "            torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model)\n",
+    "        )\n",
     "        pe[:, 0::2] = torch.sin(position * div_term)\n",
     "        pe[:, 1::2] = torch.cos(position * div_term)\n",
     "        pe = pe.unsqueeze(0)\n",
-    "        self.register_buffer('pe', pe)\n",
+    "        self.register_buffer(\"pe\", pe)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return x + self.pe[:, :x.size(1)]\n",
+    "        return x + self.pe[:, : x.size(1)]\n",
+    "\n",
     "\n",
     "class MultiHeadSelfAttention(nn.Module):\n",
     "    def __init__(self, d_model, num_heads):\n",
@@ -170,37 +161,55 @@
     "        assert d_model % num_heads == 0\n",
     "        self.d_k = d_model // num_heads\n",
     "        self.num_heads = num_heads\n",
-    "        \n",
+    "\n",
     "        self.q_linear = nn.Linear(d_model, d_model)\n",
     "        self.k_linear = nn.Linear(d_model, d_model)\n",
     "        self.v_linear = nn.Linear(d_model, d_model)\n",
     "        self.out_linear = nn.Linear(d_model, d_model)\n",
-    "        \n",
+    "\n",
     "    def forward(self, x, mask=None):\n",
     "        batch_size = x.shape[0]\n",
-    "        \n",
-    "        q = self.q_linear(x).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)\n",
-    "        k = self.k_linear(x).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)\n",
-    "        v = self.v_linear(x).view(batch_size, -1, self.num_heads, self.d_k).transpose(1, 2)\n",
-    "        \n",
+    "\n",
+    "        q = (\n",
+    "            self.q_linear(x)\n",
+    "            .view(batch_size, -1, self.num_heads, self.d_k)\n",
+    "            .transpose(1, 2)\n",
+    "        )\n",
+    "        k = (\n",
+    "            self.k_linear(x)\n",
+    "            .view(batch_size, -1, self.num_heads, self.d_k)\n",
+    "            .transpose(1, 2)\n",
+    "        )\n",
+    "        v = (\n",
+    "            self.v_linear(x)\n",
+    "            .view(batch_size, -1, self.num_heads, self.d_k)\n",
+    "            .transpose(1, 2)\n",
+    "        )\n",
+    "\n",
     "        scores = torch.matmul(q, k.transpose(-2, -1)) / math.sqrt(self.d_k)\n",
     "        if mask is not None:\n",
-    "            scores = scores.masked_fill(mask == 0, float('-1e9'))\n",
-    "        \n",
+    "            scores = scores.masked_fill(mask == 0, float(\"-1e9\"))\n",
+    "\n",
     "        attn_weights = F.softmax(scores, dim=-1)\n",
     "        output = torch.matmul(attn_weights, v)\n",
-    "        \n",
-    "        output = output.transpose(1, 2).contiguous().view(batch_size, -1, self.num_heads * self.d_k)\n",
+    "\n",
+    "        output = (\n",
+    "            output.transpose(1, 2)\n",
+    "            .contiguous()\n",
+    "            .view(batch_size, -1, self.num_heads * self.d_k)\n",
+    "        )\n",
     "        return self.out_linear(output)\n",
+    "\n",
     "\n",
     "class FeedForward(nn.Module):\n",
     "    def __init__(self, d_model, d_ff):\n",
     "        super(FeedForward, self).__init__()\n",
     "        self.fc1 = nn.Linear(d_model, d_ff)\n",
     "        self.fc2 = nn.Linear(d_ff, d_model)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        return self.fc2(F.relu(self.fc1(x)))\n",
+    "\n",
     "\n",
     "class TransformerBlock(nn.Module):\n",
     "    def __init__(self, d_model, num_heads, d_ff, dropout=0.1):\n",
@@ -210,7 +219,7 @@
     "        self.ffn = FeedForward(d_model, d_ff)\n",
     "        self.norm2 = nn.LayerNorm(d_model)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x, mask=None):\n",
     "        attn_out = self.attention(x, mask)\n",
     "        x = self.norm1(x + self.dropout(attn_out))\n",
@@ -218,25 +227,32 @@
     "        x = self.norm2(x + self.dropout(ffn_out))\n",
     "        return x\n",
     "\n",
+    "\n",
     "class Transformer(nn.Module):\n",
-    "    def __init__(self, vocab_size, d_model=512, num_heads=8, d_ff=2048, num_layers=6, max_len=5000):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        vocab_size,\n",
+    "        d_model=512,\n",
+    "        num_heads=8,\n",
+    "        d_ff=2048,\n",
+    "        num_layers=6,\n",
+    "        max_len=5000,\n",
+    "    ):\n",
     "        super(Transformer, self).__init__()\n",
     "        self.embedding = nn.Embedding(vocab_size, d_model)\n",
     "        self.pos_encoding = PositionalEncoding(d_model, max_len)\n",
-    "        self.layers = nn.ModuleList([TransformerBlock(d_model, num_heads, d_ff) for _ in range(num_layers)])\n",
+    "        self.layers = nn.ModuleList(\n",
+    "            [TransformerBlock(d_model, num_heads, d_ff) for _ in range(num_layers)]\n",
+    "        )\n",
     "        self.out_linear = nn.Linear(d_model, vocab_size)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x, mask=None):\n",
     "        x = self.embedding(x)\n",
     "        x = self.pos_encoding(x)\n",
-    "        mask = torch.triu(torch.ones(x.shape[1], x.shape[1]), diagonal=1)\n",
     "        for layer in self.layers:\n",
-    "            x = layer(x, mask)\n",
+    "            x = layer(x)\n",
     "        return self.out_linear(x)\n",
-    "\n",
-    "model = Transformer(1000, 32, 8, 64, 2, 5000)\n",
-    "\n",
-    "print(model)"
+    "\n"
    ]
   },
   {
@@ -299,41 +315,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(rank, world_size):\n",
+    "def parse_yaml_config(file_path):\n",
+    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        config = yaml.safe_load(f)\n",
     "\n",
-    "    backend = \"nccl\" if torch.cuda.is_available() else \"gloo\"\n",
-    "    device = torch.device(f\"cuda:{rank}\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model_args = {\n",
+    "        \"vocab_size\": config.get(\"vocab_size\"),\n",
+    "        \"max_seq_length\": config.get(\"max_seq_length\"),\n",
+    "        \"hidden_size\": config.get(\"hidden_size\"),\n",
+    "        \"feedforward_size\": config.get(\"feedforward_size\"),\n",
+    "        \"num_heads\": config.get(\"num_heads\"),\n",
+    "        \"num_layers\": config.get(\"num_layers\"),\n",
+    "    }\n",
     "\n",
-    "    dist.init_process_group(backend=backend, rank=rank, world_size=world_size)\n",
+    "    dataset_args = {\n",
+    "        \"dataset_size\": config.get(\"dataset_size\"),\n",
+    "        \"data_length\": config.get(\"data_length\"),\n",
+    "    }\n",
     "\n",
-    "    dataset = NLPDataset(size=12, length=10)\n",
-    "    sampler = DistributedSampler(dataset, num_replicas=world_size, rank=rank)\n",
-    "    dataloader = DataLoader(dataset, batch_size=2, sampler=sampler)\n",
+    "    training_args = {\n",
+    "        \"train_epochs\": config.get(\"train_epochs\"),\n",
+    "        \"micro_batch_size\": config.get(\"micro_batch_size\"),\n",
+    "        \"micro_num\": config.get(\"micro_num\"),\n",
+    "        \"learning_rate\": config.get(\"learning_rate\"),\n",
+    "        \"device_type\": config.get(\"device_type\"),\n",
+    "    }\n",
     "\n",
-    "    VOCAB_SIZE = 100\n",
-    "    D_MODEL = 12\n",
-    "    NUM_HEADS = 4\n",
-    "    D_FF = 24\n",
-    "    NUM_LAYERS = 2\n",
-    "    MAX_LEN = 100\n",
+    "    training_args[\"batch_size\"] = (\n",
+    "        training_args[\"micro_num\"] * training_args[\"micro_batch_size\"]\n",
+    "    )\n",
     "\n",
-    "    model = Transformer(vocab_size=VOCAB_SIZE, d_model=D_MODEL, num_heads=NUM_HEADS, d_ff=D_FF, num_layers=NUM_LAYERS, max_len=MAX_LEN).to(device)\n",
-    "    model = DDP(model, device_ids=[rank] if torch.cuda.is_available() else None)\n",
+    "    parallel_args = {\n",
+    "        \"pipeline_parallel_size\": config.get(\"pipeline_parallel_size\"),\n",
+    "        \"data_parallel_size\": config.get(\"data_parallel_size\"),\n",
+    "    }\n",
     "\n",
-    "    criterion = nn.CrossEntropyLoss()\n",
-    "    optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
+    "    return model_args, dataset_args, training_args, parallel_args\n",
     "\n",
-    "    for epoch in range(500):\n",
+    "def train(rank, world_size, config_file):\n",
+    "    model_args, dataset_args, training_args, parallel_args = parse_yaml_config(\n",
+    "        config_file\n",
+    "    )\n",
+    "\n",
+    "    def compute_loss(output, target):\n",
+    "        criterion = nn.CrossEntropyLoss()\n",
+    "        loss = criterion(output.view(-1, model_args[\"vocab_size\"]), target.view(-1))\n",
+    "        return loss\n",
+    "\n",
+    "    x = torch.zeros(\n",
+    "        (training_args[\"micro_batch_size\"], dataset_args[\"data_length\"]),\n",
+    "        dtype=torch.long,\n",
+    "    )\n",
+    "\n",
+    "    split_spec = {}\n",
+    "    for i in range(parallel_args[\"pipeline_parallel_size\"] - 1):\n",
+    "        layers_id = (\n",
+    "            (model_args[\"num_layers\"] - 1)\n",
+    "            // parallel_args[\"pipeline_parallel_size\"]\n",
+    "            * (i + 1)\n",
+    "        )\n",
+    "        split_spec[f\"layers.{layers_id}\"] = SplitPoint.END\n",
+    "\n",
+    "    pipe = pipeline(\n",
+    "        module=Transformer(\n",
+    "            vocab_size=model_args[\"vocab_size\"],\n",
+    "            d_model=model_args[\"hidden_size\"],\n",
+    "            num_heads=model_args[\"num_heads\"],\n",
+    "            d_ff=model_args[\"feedforward_size\"],\n",
+    "            num_layers=model_args[\"num_layers\"],\n",
+    "            max_len=model_args[\"max_seq_length\"],\n",
+    "        ),\n",
+    "        mb_args=(x,),\n",
+    "        split_spec=split_spec,\n",
+    "    )\n",
+    "\n",
+    "    mesh_2d = init_device_mesh(\n",
+    "        training_args[\"device_type\"],\n",
+    "        mesh_shape=(\n",
+    "            parallel_args[\"data_parallel_size\"],\n",
+    "            parallel_args[\"pipeline_parallel_size\"],\n",
+    "        ),\n",
+    "        mesh_dim_names=(\"dp\", \"pp\"),\n",
+    "    )\n",
+    "\n",
+    "    pp_group = mesh_2d.get_group(\"pp\")\n",
+    "    dp_group = mesh_2d.get_group(\"dp\")\n",
+    "\n",
+    "    pp_rank = dist.get_rank(pp_group)\n",
+    "    dp_rank = dist.get_rank(dp_group)\n",
+    "\n",
+    "    device = f\"cuda:{rank % 2}\" if training_args[\"device_type\"] == \"gpu\" else \"cpu\"\n",
+    "\n",
+    "    stage_mod = pipe.get_stage_module(pp_rank).to(device)\n",
+    "    print(\"rank, stage_mod\", rank, stage_mod)\n",
+    "    dp_mod = DDP(\n",
+    "        stage_mod,\n",
+    "        device_ids=[rank] if not device == \"cpu\" else None,\n",
+    "        process_group=dp_group,\n",
+    "    )\n",
+    "    optimizer = optim.SGD(dp_mod.parameters(), lr=training_args[\"learning_rate\"])\n",
+    "    info = pipe.info()\n",
+    "    stage = build_stage(stage_mod, pp_rank, info, device, pp_group)\n",
+    "\n",
+    "    schedule = ScheduleGPipe(stage, training_args[\"micro_num\"], compute_loss)\n",
+    "    dataset = NLPDataset(\n",
+    "        size=dataset_args[\"dataset_size\"], length=dataset_args[\"data_length\"]\n",
+    "    )\n",
+    "    sampler = DistributedSampler(\n",
+    "        dataset, num_replicas=parallel_args[\"data_parallel_size\"], rank=dp_rank\n",
+    "    )\n",
+    "    dataloader = DataLoader(\n",
+    "        dataset, batch_size=training_args[\"batch_size\"], sampler=sampler\n",
+    "    )\n",
+    "    for epoch in range(training_args[\"train_epochs\"]):\n",
     "        for batch, data in enumerate(dataloader):\n",
-    "            data = data.to(device)\n",
+    "            x = data.to(device)\n",
     "            optimizer.zero_grad()\n",
-    "            outputs = model(data)\n",
-    "            loss = criterion(outputs.view(-1, VOCAB_SIZE), data.view(-1))\n",
-    "            loss.backward()\n",
+    "            if pp_rank == 0:\n",
+    "                schedule.step(x)\n",
+    "            else:\n",
+    "                losses = []\n",
+    "                output = schedule.step(target=x, losses=losses)\n",
+    "                loss = torch.stack(losses).mean()\n",
+    "                dist.all_reduce(loss, op=ReduceOp.SUM, group=dp_group)\n",
+    "                if dp_rank == 0:\n",
+    "                    print(\n",
+    "                        f\"Epoch {epoch}, Batch {batch}, Loss: {loss / parallel_args['data_parallel_size']}\"\n",
+    "                    )\n",
     "            optimizer.step()\n",
-    "\n",
-    "            if rank == 0:\n",
-    "                print(f\"Epoch {epoch}, Batch {batch}, Loss: {loss.item()}\")\n",
     "\n",
     "    dist.destroy_process_group()"
    ]
@@ -343,6 +452,14 @@
    "metadata": {},
    "source": [
     "### 5.4启动训练"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 修改 run.sh 中服务器地址\n",
+    "- 第 i 台机器对应的启动命令为 bash run.sh i"
    ]
   },
   {
@@ -1935,7 +2052,7 @@
     }
    ],
    "source": [
-    "!bash run.sh"
+    "!bash run.sh 0/1"
    ]
   }
  ],
