fix loss compute

--- a/demo3/demo3.ipynb
+++ b/demo3/demo3.ipynb
@@ -363,7 +363,7 @@
     "        return loss\n",
     "\n",
     "    x = torch.zeros(\n",
-    "        (training_args[\"micro_batch_size\"], dataset_args[\"data_length\"]),\n",
+    "        (training_args[\"micro_batch_size\"], dataset_args[\"data_length\"] - 1),\n",
     "        dtype=torch.long,\n",
     "    )\n",
     "\n",
@@ -429,13 +429,14 @@
     "    )\n",
     "    for epoch in range(training_args[\"train_epochs\"]):\n",
     "        for batch, data in enumerate(dataloader):\n",
-    "            x = data.to(device)\n",
+    "            label = data[:, 1:].to(device)\n",
+    "            x = data[:, :-1].to(device)\n",
     "            optimizer.zero_grad()\n",
     "            if pp_rank == 0:\n",
     "                schedule.step(x)\n",
     "            else:\n",
     "                losses = []\n",
-    "                output = schedule.step(target=x, losses=losses)\n",
+    "                output = schedule.step(target=label, losses=losses)\n",
     "                loss = torch.stack(losses).mean()\n",
     "                dist.all_reduce(loss, op=ReduceOp.SUM, group=dp_group)\n",
     "                if dp_rank == 0:\n",
