update demo5 for 7B training

--- a/demo5/demo5.ipynb
+++ b/demo5/demo5.ipynb
@@ -58,6 +58,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pwd\n",
+    "%cd demo5"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +84,13 @@
     "from datasets import load_dataset\n",
     "from transformers import AutoModelForCausalLM, TrainingArguments, Trainer\n",
     "import os\n",
+    "import torch\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"6,7\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,16 +98,16 @@
     "dataset = load_dataset(dataset_path, split=\"train\")\n",
     "dataset = dataset.shuffle(seed=42).select(range(10))\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"./Qwen2.5-0.5B\")"
+    "tokenizer = AutoTokenizer.from_pretrained(\"/nvme/models/models/Qwen2.5-7B-Instruct\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_prompt = \"TEST\"\n",
+    "system_prompt = \"You are Qwen, created by Alibaba Cloud. You are a helpful assistant.\"\n",
     "def generate_r1_prompt(prompt, completion):\n",
     "    input_ids, attention_mask, labels = [], [], []\n",
     "    instruction = [\n",
@@ -116,19 +127,24 @@
     "        }\n",
     "    ]\n",
     "\n",
-    "    tokenized_instruction = tokenizer.apply_chat_template(instruction, tokenize=True, return_dict=True)\n",
-    "    tokenized_response = tokenizer.apply_chat_template(response, tokenize=True, return_dict=True)\n",
+    "    full = instruction + response\n",
     "\n",
-    "    input_ids = tokenized_instruction[\"input_ids\"] + tokenized_response[\"input_ids\"]\n",
-    "    attention_mask = tokenized_instruction[\"attention_mask\"] + tokenized_response[\"attention_mask\"]\n",
-    "    labels = [-100] * len(tokenized_instruction[\"input_ids\"]) + tokenized_response[\"input_ids\"]\n",
+    "    tokenized_instruction = tokenizer.apply_chat_template(instruction, tokenize=True, return_dict=True)\n",
+    "    tokenized_full = tokenizer.apply_chat_template(full, tokenize=True, return_dict=True)\n",
+    "\n",
+    "    input_ids = tokenized_full[\"input_ids\"]\n",
+    "    attention_mask = tokenized_full[\"attention_mask\"]\n",
+    "    labels = input_ids.copy()\n",
+    "    instruction_length = len(tokenized_instruction[\"input_ids\"])\n",
+    "    labels[:instruction_length] = [-100] * instruction_length\n",
     "    return {\n",
     "        \"input_ids\": input_ids,\n",
     "        \"attention_mask\": attention_mask,\n",
     "        \"labels\": labels\n",
     "    }\n",
-    "\n",
-    "dataset = dataset.map(lambda x: generate_r1_prompt(x[\"instruction\"], x[\"output\"]), remove_columns=[\"instruction\", \"output\"])"
+    " \n",
+    "dataset = dataset.map(lambda x: generate_r1_prompt(x[\"instruction\"], x[\"output\"]), remove_columns=[\"instruction\", \"output\"])\n",
+    "\n"
    ]
   },
   {
@@ -137,7 +153,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = AutoModelForCausalLM.from_pretrained(\"./Qwen2.5-0.5B\")"
+    "print(tokenizer.decode(dataset[0][\"input_ids\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tokenizer.decode(list(filter(lambda x: x != -100, dataset[0][\"labels\"]))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = AutoModelForCausalLM.from_pretrained(\"/nvme/models/models/Qwen2.5-7B-Instruct\").to(\"cuda\")\n",
+    "\n",
+    "# 自定义输入\n",
+    "prompt = \"1.11和1.9哪个大\"\n",
+    "inputs = tokenizer.apply_chat_template([{\"role\": \"user\", \"content\": prompt}],\n",
+    "                                       add_generation_prompt=True,\n",
+    "                                       tokenize=True,\n",
+    "                                       return_tensors=\"pt\",\n",
+    "                                       return_dict=True\n",
+    "                                       ).to(\"cuda\")\n",
+    "\n",
+    "# 贪婪采样设置，生成时仅考虑概率最高的词\n",
+    "gen_kwargs = {\"max_new_tokens\": 100, \"do_sample\": True, \"top_k\": 1}\n",
+    "\n",
+    "# 模型生成\n",
+    "with torch.no_grad():\n",
+    "    outputs = model.generate(**inputs, **gen_kwargs)\n",
+    "    print(\"原始模型推理结果：\\n\", tokenizer.decode(outputs[0], skip_special_tokens=False))\n"
    ]
   },
   {
